# kubedantic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
kubedantic/: ssh_utils.py
kubedantic/client/: __init__.py  configmap.py  create.py  job.py  secret.py
kubedantic/client/api/: __init__.py  batch_client_protocol.py  client_protocol.py  ssh_api_client.py  ssh_batch_client.py  v1_api_client.py  v1_batch_client.py
kubedantic/client/models/: __init__.py  base.py  v1_affinity.py  v1_aws_elastic_block_store_volume_source.py  v1_azure_disk_volume_source.py  v1_azure_file_volume_source.py  v1_capabilities.py  v1_ceph_fs_volume_source.py  v1_cinder_volume_source.py  v1_claim_source.py  v1_cluster_trust_bundle_projection.py  v1_config_map.py  v1_config_map_key_selector.py  v1_config_map_projection.py  v1_config_map_ref.py  v1_config_map_volume_source.py  v1_container.py  v1_container_port.py  v1_container_resize_policy.py  v1_csi_volume_source.py  v1_downward_api_projection.py  v1_downward_api_volume_file.py  v1_downward_api_volume_source.py  v1_empty_dir_volume_source.py  v1_env_from_source.py  v1_env_var.py  v1_env_var_source.py  v1_ephemeral_container.py  v1_ephemeral_volume_source.py  v1_exec_action.py  v1_fc_volume_source.py  v1_flex_volume_source.py  v1_flocker_volume_source.py  v1_gce_persistent_disk_volume_source.py  v1_git_repo_volume_source.py  v1_glusterfs_volume_source.py  (+85 more)
kubedantic/kustomization/: __init__.py  kustomization.py
update/: add_imports.py  create_model.py
update/models/: constants.py  field.py  model.py  module.py
