[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kubedantic"
description = "pydantic based k8s client"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    {name = "Dmitriy Zanadvornykh", email = "zandmitrij@gmail.com"},
]

maintainers = [
    {name = "Dmitriy Zanadvornykh", email = "zandmitrij@gmail.com"},
]

dependencies = [
    "PyYAML==6.0",
    "kubernetes==29.0.0",
    "pydantic==2.6.4",
    "pydantic-core==2.16.3",
    "paramiko==3.4.0",
]

classifiers = [
  #   3 - Alpha, 4 - Beta, 5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",

  "Intended Audience :: Developers",
  "Topic :: Utilities",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[tool.setuptools.packages.find]
where = ["kubedantic"]


[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = 'black'
line-length = 120

[tool.ruff]
target-version = 'py38'
line-length = 120
